--- a/template/server-block-conf.ejs
+++ b/template/server-block-conf.ejs
@@ -71,7 +71,16 @@ server {
         resolver 127.0.0.11 valid=10s;
         # IMPORTANT!! If you are here from an old thread to set a custom port, you do not need to modify this port manually here!!
         # Simply change the Container HTTP Port from the dashboard HTTP panel
+<% if (s.isBlueGreen) { %>
+        # Blue-Green: route to active slot (<%-s.activeSlot%>)
+        <% if (s.activeSlot === 'blue') { %>
+        set $upstream http://<%-s.blueLocalDomain%>:<%-s.containerHttpPort%>;
+        <% } else { %>
+        set $upstream http://<%-s.greenLocalDomain%>:<%-s.containerHttpPort%>;
+        <% } %>
+<% } else { %>
         set $upstream http://<%-s.localDomain%>:<%-s.containerHttpPort%>;
+<% } %>
 
         location / {
 
